# hipeac-press

./: .gitignore  Dockerfile  Dockerfile_full  LICENSE  Pipfile  README.md  build.py  generate_web.py  merge.py  nginx.conf  package.json  predeploy.sh  pyproject.toml  reader.py  requirements.txt  zenodo.py
.vitepress/: config.ts
.vitepress/theme/: index.ts  style.css
hipeac_press/: __init__.py  docx.py  reader.py  recommendations.py  type_definitions.py  types.py  utils.py
hipeac_press/transformers/: __init__.py  base.py  epub.py  html.py  markdown.py  pdf.py  pdf_templates.py
hipeac_press/utils/: epub.py  pdf.py
html/: 404.html  artificial-intelligence--ai-assisted-software-engineering.html  artificial-intelligence--ai-everywhere.html  artificial-intelligence--ai-for-eda.html  artificial-intelligence--introduction.html  artificial-intelligence--swot.html  cybersecurity--browser-tracking.html  cybersecurity--dlt-and-ipfs-for-the-ncp.html  cybersecurity--integrity-of-hardware-supply-chains.html  cybersecurity--introduction.html  cybersecurity--microarchitectures-as-root-of-trust.html  cybersecurity--ncp-cybersecurity.html  cybersecurity--ncp-privacy.html  hashmap.json  index.html  introduction--introduction.html  new-hardware--heterogeneous-and-domain-specific-acceleration.html  new-hardware--introduction.html  new-hardware--open-source-hardware.html  new-hardware--quantum-computing.html  sustainability--introduction.html  sustainability--sustainable-computer-systems.html  sustainability--sustainable-materials-and-production.html  sustainability--what-does-it-mean-to-be-sustainable.html  the-next-computing-paradigm-ncp--bridging-cps-communities.html  the-next-computing-paradigm-ncp--introduction.html  the-next-computing-paradigm-ncp--ncp-societal-aspects.html  the-next-computing-paradigm-ncp--the-spatial-web.html
press/: docx.py  reader.py  types.py  utils.py
public/: .gitignore  index.md
(+59 files in other folders)
