[tool.poetry]
name = "hipeac-press"
version = "0.1.0"
description = ""
authors = ["Eneko Illarramendi <eneko.illarramendi@ugent.be>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.11.0"
defusedxml = "*"
pdfino = "*"
pydantic = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
ruff = "*"

[tool.coverage.run]
omit = ["*tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "def __repr__"]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov=hipeac_press --cov-report=html"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.isort]
lines-after-imports = 2

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "D"]
ignore = ["B026", "SIM105", "D100", "D104", "D105", "D107", "D417"]

[tool.ruff.lint.pydocstyle]
convention = "google"
