[tool.poetry]
name = "hipeac-press"
version = "0.2.0"
description = ""
authors = ["Eneko Illarramendi <eneko.illarramendi@ugent.be>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.11.0"
markdownify = "*"
markdown2 = "*"
pdfino = {git = "https://github.com/eillarra/pdfino.git", branch = "main"}
pydantic = "*"
pypdf = "*"
pypub3 = "*"
python-docx = "*"
svglib = "*"
weasyprint = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
ruff = "*"

[tool.coverage.run]
omit = ["*tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "def __repr__"]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov=hipeac_press --cov-report=html"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "D"]
ignore = ["SIM105", "D100", "D104", "D105", "D107", "D417", "D203", "D213"]

[tool.ruff.lint.isort]
lines-after-imports = 2
